<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CCE6E1"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ArbitrageCalculator">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="#292828"
        android:textIsSelectable="false"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/BookMarker1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#6C6B68"
        android:paddingLeft="40dp"
        android:paddingTop="5dp"
        android:paddingRight="40dp"
        android:paddingBottom="5dp"
        android:text="@string/BookMarker1"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/BookMarker1_Outcome1Input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#F44336"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/AOutcome1Text"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/Outcome1"
            android:textAlignment="center"
            android:textColor="#F8F7F7"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/AOutcome1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:ems="10"
            android:hint="@string/enterOutcome1Odds"
            android:inputType="number|numberDecimal"
            android:padding="5dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/BookMarker1_Outcome2Input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#F44336"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/AOutcome2Text"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/Outcome2"
            android:textAlignment="center"
            android:textColor="#F8F7F7"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/AOutcome2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:ems="10"
            android:hint="@string/enterOutcome2Odds"
            android:inputType="number|numberDecimal"
            android:padding="5dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/BookMarker2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#6C6B68"
        android:paddingLeft="40dp"
        android:paddingTop="5dp"
        android:paddingRight="40dp"
        android:paddingBottom="5dp"
        android:text="@string/BookMarker2"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/BookMarker2_Outcome1Input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#009688"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/BOutcome1Text"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/Outcome1"
            android:textAlignment="center"
            android:textColor="#F8F7F7"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/BOutcome1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:ems="10"
            android:hint="@string/enterOutcome1Odds"
            android:inputType="number|numberDecimal"
            android:padding="5dp"
            android:textIsSelectable="false" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/BookMarker2_Outcome2Input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#009688"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/BOutcome2Text"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/Outcome2"
            android:textAlignment="center"
            android:textColor="#F8F7F7"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/BOutcome2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:ems="10"
            android:hint="@string/enterOutcome2Odds"
            android:inputType="number|numberDecimal"
            android:padding="5dp" />

    </LinearLayout>

    <Button
        android:id="@+id/CalculateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:backgroundTint="#323030"
        android:onClick="clickCalculate"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/CalculateButton" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/IsArbOrNot"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp" />

        <TextView
            android:id="@+id/Outcome1Who"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/which_bookmarker_to_use_for_outcome_1" />

        <TextView
            android:id="@+id/Outcome2Who"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/which_bookmarker_to_use_for_outcome_2" />
    </LinearLayout>

</LinearLayout>